# Healthy-Eats

./: README.md  db.sqlite3  manage.py  misc.py  pyproject.toml  recognized.txt  render.yaml  training_data.jsonl  try.json
base/: admin.py  forms.py  models.py  parser.py  recipe_option.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/templates/base/: home.html  login.html  nutrition.html  recipe.html  recipe_result.html  register.html  result.html  upload_extract.html
concode/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: dynamicTextField.js  main.js
static/styles/: index.css
templates/: layout.html
