[tool.poetry]
name = "healthy-eats"
version = "0.1.0"
description = ""
authors = ["Mohammad Arshad <mdarshad1000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
render-python = "^2.3.0"
langchain = "^0.0.292"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"
poetry = "1.1.4"
openai = "^0.28.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
